# owly

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODESTYLE.md  LICENSE.md  README.md  Taskfile.yml  codecov.yml  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
design/: design_review.md  favicon-candidates.html  refactoring_tasklist.md  tuzov-os-design-mock-original.html  tuzov-os-design-mock.html  tuzov-os-design-spec.md
design/favicon-assets/: package-lock.json  package.json
docs/api/: README.md  commands-api.md
docs/tasks/: dynamic-favicon.md  native-menu-polish.md  pool-defaults-rework.md  pool-placed-divergence.md  spec-update-plan.md  tailwind-migration.md
scripts/: bump.mjs  seed.ts
spec/: done-archive.md
spec/llm-guides/: README.md  dashboard-authoring.md
spec/tuzov-os/: 00-overview.md  01-data-schema.md  02-architecture.md  03-phase-1-foundation.md  04-phase-2-weekly-grid.md  05-phase-3-dnd-and-pool.md  06-phase-4-entities-and-templates.md  07-phase-5-dashboards.md  07a-dashboard-authoring-guide.md  08-phase-6-ai-integration.md  e2e-tests.md  post-review-backlog.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: files.rs  mod.rs  system.rs
src/hooks/: useBlockGesture.ts  useEscape.ts  useFocusTrap.ts  useHorizonDrag.ts  useKanbanGesture.ts  usePlannerCommands.ts  usePlannerHotkeys.ts  usePlannerOverlay.ts  useRestoreFocus.ts  useReviewData.ts  useToday.ts
src/pages/: ArchivePage.e2e.test.tsx  ArchivePage.tsx  ContextPage.e2e.test.tsx  ContextPage.smoke.test.tsx  ContextPage.tsx  DashboardsPage.tsx  EntitiesPage.tsx  HorizonPage.e2e.test.tsx  HorizonPage.smoke.test.tsx  HorizonPage.tsx  PlannerPage.browser.test.tsx  PlannerPage.e2e.test.tsx  PlannerPage.legacy.tsx  PlannerPage.tsx  ProjectsPage.e2e.test.tsx  ProjectsPage.tsx  ReviewPage.e2e.test.tsx  ReviewPage.smoke.test.tsx  ReviewPage.tsx  TasksPage.browser.test.tsx  TasksPage.tsx  (+1 more)
(+356 files in other folders)
