[package]
name = "tuzov-os"
version = "0.1.0"
description = "TuzovOS — personal control center"
authors = ["TuzovOS"]
edition = "2021"

[lib]
name = "tuzov_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
