[package]
name = "tuzov-os"
version = "0.1.0"
description = "TuzovOS — personal control center"
authors = ["TuzovOS"]
edition = "2021"

[lib]
name = "tuzov_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2.3.1"
