[package]
name = "owly"
version = "0.1.0"
description = "Owly — personal control center"
authors = ["Nikolay Tuzov <just.skiv@gmail.com>"]
edition = "2021"

[lib]
name = "owly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Override the binary name so the Dock tooltip in `tauri dev` shows
# "Owly" instead of the lowercase Cargo package name. In a release
# bundle, productName from tauri.conf.json takes over anyway; this
# only matters for dev runs that launch target/debug/<exe> directly.
[[bin]]
name = "Owly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2.3.1"
notify = "8"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-web-kit = "0.3"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
